kodex-rs/tui/src/chatwidget/snapshots/kodex_tui__chatwidget__tests__default_footer_generating_thread_title.snap
---
source: tui/src/chatwidget/tests/terminal_title.rs
expression: "render_bottom_popup(&chat, 100)"
---
› Ask Kodex to do anything

  GPT-5.6-Sol default · /tmp/project · ⠋
