kodex-rs/tui/src/chatwidget/snapshots/kodex_tui__chatwidget__tests__esc_interrupt_goal_paused_footer@windows.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: snapshot
---
"                                                                                "
"• Working (0s • esc to interrupt)                                               "
"                                                                                "
"                                                                                "
"› Ask Kodex to do anything                                                      "
"                                                                                "
"  GPT-5.6-Sol default · /tmp/project              Goal paused (/goal resume)    "
