kodex-rs/tui/src/chatwidget/snapshots/kodex_tui__chatwidget__tests__feedback_good_result_consent_popup.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
  Upload logs?

  The following files will be sent:
    • kodex-logs.log
    • client-logs.txt (if available)
    • kodex-doctor-report.json
    • kodex-apps-tools-cache.json (if available)
    • kodex-app-directory-cache.json (if available)
    • auto-review-rollout-thread-1.jsonl
    • kodex-connectivity-diagnostics.txt


› 1. Yes  Share the current Kodex session logs and diagnostics with the team for
          troubleshooting
  2. No

  enter select · esc back
